--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -209,6 +209,7 @@
 
 
 .button {
+	display: inline-block;
 	padding: calc($index * 0.5 * $coaficent-sm)
 		calc($index * 1.55 * $coaficent-sm);
 	white-space: nowrap;
