--- a/app/styles/sass/blocks/slider-services.scss
+++ b/app/styles/sass/blocks/slider-services.scss
@@ -1,9 +1,8 @@
-.block-services {	
+.block-services {
 	overflow-x: hidden;
-	padding-top: calc($index * .5);
+	padding-top: calc($index * 0.5);
 	&__container {
 		position: relative;
-		//max-width: calc($index * 32  * $coaficent-md);
 		max-width: 95vw;
 		margin: 0 auto;
 		padding-bottom: calc($index * 2);
@@ -21,12 +20,36 @@
 	.swiper-button-next {
 		right: 0;
 	}
-	@include media-breakpoint-up(sm) {
-		padding-top: calc($index * .5);
-		&__container {
-			max-width: calc($index * 32);
-		}
+
+	.swiper-pagination {
+		position: relative;
+		top: 0;
+		margin: 0 auto calc($index * 1 * $coaficent-sm) auto;
+	}
+
+	.swiper-pagination-bullet {
+		display: inline-block;
+		font-family: noto-sans-tm;
+		font-size: calc($index * .46 * $coaficent-sm);
+		line-height: calc($index * .9 * $coaficent-sm);
+		width: calc($index * 1 * $coaficent-sm);
+		height: calc($index * 1 * $coaficent-sm);
+		margin: 0 calc($index * .33 * $coaficent-sm) !important;
+		background-color: #2c2c2c;
+    border: 1px solid #8f8f8f;
 	
+	}
+
+	.swiper-pagination-bullet-active {
+		background-color: #303030;
+	}
+
+	@include media-breakpoint-up(sm) {
+		padding-top: calc($index * 0.5);
+		&__container {
+			max-width: 85vw;
+		}
+
 		.swiper-button-prev,
 		.swiper-button-next {
 			display: flex;
@@ -34,8 +57,8 @@
 			height: calc($index * 1.46);
 			background-color: $black;
 			border: 1px solid #8f8f8f;
-			transition: background-color 0.25s ease,  border 0.25s ease;
-			top: calc($index * 7);
+			transition: background-color 0.25s ease, border 0.25s ease;
+			top: calc($index * 10 * $coaficent-md);
 			@media (any-hover: hover) {
 				&:hover {
 					background-color: lighten($black, 5%);
@@ -47,33 +70,64 @@
 				font-size: calc($index * 0.6);
 			}
 		}
+		.swiper-pagination {
+			position: relative;
+			top: 0;
+			margin: 0 auto calc($index * 1 * $coaficent-md) auto;
+		}
+	
+		.swiper-pagination-bullet {
+			display: inline-block;
+			font-family: noto-sans-tm;
+			font-size: calc($index * .46 * $coaficent-md);
+			line-height: calc($index * .9 * $coaficent-md);
+			width: calc($index * 1 * $coaficent-md);
+			height: calc($index * 1 * $coaficent-md);
+			margin: 0 calc($index * .33 * $coaficent-md) !important;
+			background-color: #2c2c2c;
+			border: 1px solid #8f8f8f;
+		
+		}
 	}
 	@include media-breakpoint-up(lg) {
-		padding-top: calc($index * .5);
+		padding-top: calc($index * 0.5);
 		&__container {
 			max-width: calc($index * 32);
 		}
-	
+
 		.swiper-button-prev,
 		.swiper-button-next {
 			width: calc($index * 1.03);
 			height: calc($index * 1.46);
-			top: calc($index * 7);
+			top: calc($index * 9.5);
 			&::after {
 				font-size: calc($index * 0.6);
 			}
-		}		
+		}
+		.swiper-pagination-bullet {
+			display: inline-block;
+			font-family: noto-sans-tm;
+			font-size: calc($index * .46);
+			line-height: calc($index * .9);
+			width: calc($index * 1);
+			height: calc($index * 1);
+			margin: 0 calc($index * .33) !important;
+			background-color: #2c2c2c;
+			border: 1px solid #8f8f8f;
+		
+		}
 	}
 }
 
 .slider-services {
 	min-width: 100%;
+	max-width: 85vw;
 	// .slider-services__slide
 
 	&__slide {
 		width: 100%;
 		text-align: center;
-		font-size: calc($index * .6  * $coaficent-md);
+		font-size: calc($index * 0.6 * $coaficent-md);
 		display: flex;
 		flex-direction: column;
 		user-select: none;
@@ -82,7 +136,7 @@
 	// .slider-services__img
 
 	&__img {
-		margin-bottom: calc($index * .83 * $coaficent-md);
+		margin-bottom: calc($index * 0.83 * $coaficent-md);
 		img {
 			display: block;
 			width: 100%;
@@ -98,7 +152,7 @@
 		margin-bottom: calc($index * 1 * $coaficent-md);
 		h3 {
 			font-weight: 500;
-			font-size: calc($index * .8  * $coaficent-sm);
+			font-size: calc($index * 0.8 * $coaficent-sm);
 			line-height: 1.3;
 			text-align: center;
 			text-transform: uppercase;
@@ -107,7 +161,7 @@
 
 		p {
 			font-weight: 300;
-			font-size: calc($index * .6  * $coaficent-sm);
+			font-size: calc($index * 0.6 * $coaficent-sm);
 			line-height: 1.3;
 			text-align: center;
 			color: rgba(#f5f5f5, 0.65);
@@ -115,57 +169,57 @@
 		}
 	}
 	@include media-breakpoint-up(sm) {
-		max-width: calc($index * 23.3);
+		max-width: calc($index * 23.3 * $coaficent-md);
 		min-width: auto;
 		// .slider-services__slide
-	
+
 		&__slide {
-			font-size: calc($index * .6 );
+			font-size: calc($index * 0.6 * $coaficent-md);
 		}
-	
+
 		// .slider-services__img
-	
+
 		&__img {
-			margin-bottom: calc($index * .83);
+			margin-bottom: calc($index * 0.83 * $coaficent-md);
 		}
-	
+
 		// .slider-services__title
-	
+
 		&__title {
-			margin-bottom: calc($index * 1);
+			margin-bottom: calc($index * 1 * $coaficent-md);
 			h3 {
-				font-size: calc($index * .8);
+				font-size: calc($index * 0.8 * $coaficent-md);
 			}
-	
+
 			p {
-				font-size: calc($index * .6);
+				font-size: calc($index * 0.6 * $coaficent-md);
 			}
 		}
 	}
 	@include media-breakpoint-up(lg) {
 		max-width: calc($index * 23.3);
 		// .slider-services__slide
-	
+
 		&__slide {
-			font-size: calc($index * .6);
+			font-size: calc($index * 0.6);
 		}
-	
+
 		// .slider-services__img
-	
+
 		&__img {
-			margin-bottom: calc($index * .83);
+			margin-bottom: calc($index * 0.83);
 		}
-	
+
 		// .slider-services__title
-	
+
 		&__title {
 			margin-bottom: calc($index * 1);
 			h3 {
-				font-size: calc($index * .8);
+				font-size: calc($index * 0.8);
 			}
-	
+
 			p {
-				font-size: calc($index * .6);
+				font-size: calc($index * 0.6);
 			}
 		}
 	}
@@ -192,7 +246,7 @@
 
 	&__item {
 		flex: 0 1 auto;
-		width: calc($index * 5.66);	
+		width: calc($index * 5.66);
 		height: calc($index * 5.66);
 		position: relative;
 		img {
@@ -207,24 +261,24 @@
 		margin: 0 auto;
 
 		// .slider-services-logo__slide
-	
+
 		&__slide {
 			min-height: 1px;
 		}
-	
+
 		// .slider-services-logo__items
-	
+
 		&__items {
 			display: flex;
 			justify-content: center;
 			gap: calc($index * 2.33);
 		}
-	
+
 		// .slider-services-logo__item
-	
+
 		&__item {
 			flex: 0 1 auto;
-			width: calc($index * 5.66);	
+			width: calc($index * 5.66);
 			height: calc($index * 5.66);
 			position: relative;
 			img {
@@ -234,8 +288,5 @@
 				object-fit: cover;
 			}
 		}
-		
 	}
-
 }
-
