--- a/app/styles/sass/blocks/team.scss
+++ b/app/styles/sass/blocks/team.scss
@@ -1,328 +1,297 @@
-/* USER VARIABLES SECTION */
-
-:root {
-	--accent: #CC8869;
-	--text: #333;
-	--regular-text: 16px;
-	--lineheight: 1.65;
-	--userfont: roboto-st, sans-serif;
-	--systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif;
-	--padding: 120px;
-	--transition: cubic-bezier(.4, 0, 0, 1);
-}
-
-/* BOOTSTRAP SETTINGS SECTION */
-
-/* gutter 20px (10px + 10px). Comment this code for default gutter start at 1.5rem (24px) wide. */
-.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl { --bs-gutter-x: .625rem; }
-.row, .row > * { --bs-gutter-x: 1.25rem; }
-
-/* FONTS LOAD SECTION */
-
-@font-face { src: url("../fonts/roboto-regular-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 400; font-style: normal; }
-@font-face { src: url("../fonts/roboto-italic-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 400; font-style: italic; }
-@font-face { src: url("../fonts/roboto-bold-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 700; font-style: normal; }
-@font-face { src: url("../fonts/roboto-bolditalic-webfont.woff2") format("woff2"); font-family: "roboto-st"; font-weight: 700; font-style: italic; }
-@font-face { src: url("../fonts/assassin.woff2") format("woff2"); font-family: "assassin-st"; font-weight: 700; font-style: italic; }
-
-/* GENERAL CSS SETTINGS */
-
-
-
-
-
-/* USER STYLES */
-
-.showcase {
-	//background-color: #000;    
-	position: relative;
-	color: #fff;
-	overflow: hidden; 
-    height: 100%;
-    width: 90vw;
-    //max-width: 1200px;
-}
-.showcase::before {
-	content: '';
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	z-index: 1;
-	box-shadow: inset 0 0 500px #000;
-}
-.showcase::after {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-image: url(../images/dist/team/light.png);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center -65px;
-	animation: k-light 3s ease-in-out infinite;
-}
-.showcase__video {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	opacity: .48;
-}
-.showcase__content-wrapper {
-	position: relative;
-	z-index: 2;
-	height: 100%;
-	padding: var(--padding) 0;
-}
-.showcase__content-wrapper::before {
-	content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-image: url(../images/dist/team/glow.png);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	animation: k-glow 1.6s ease-in-out infinite;
-}
-.showcase__header {
-	position: absolute;
-	text-align: center;
-	width: 100%;
-	z-index: 1;
-	top: 40px;
-	font-family: assassin-st, sans-serif;
-	font-size: 32px;
-	color: rgba(255, 255, 255, .75);
-}
-.showcase__header span {
-	color: var(--accent);
-}
-.showcase-carousel .swiper-wrapper {
-	transition: var(--transition);
-}
-.showcase-carousel__item {
-	position: relative;
-	height: calc(100vh - var(--padding)*3);
-	text-align: center;
-	opacity: .25;
-	transform: scale(.75);
-	transition: opacity 1.8s var(--transition), transform 1.8s var(--transition)
-}
-.showcase-carousel__item::after {
-	content: '';
-	width: 120px;
-	height: 0;
-	position: absolute;
-	box-shadow: 0 0 45px 10px #010101;
-	bottom: 5px;
-	left: calc(50% - 60px);
-}
-.showcase-carousel__item p {
-	position: absolute;
-	bottom: -85px;
-	width: 100%;
-	font-family: assassin-st, sans-serif;
-	font-size: 32px;
-	color: rgba(255, 255, 255, .5);
-	text-shadow: rgb(58 78 94) 0 0 10px;
-}
-.showcase-carousel__item.swiper-slide-active {
-	opacity: .8;
-	transform: scale(.98);
-}
-.showcase-carousel__image-wrapper > * {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	perspective: 150px;
-	transform-style: preserve-3d;
-}
-.showcase-carousel__image {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-size: contain;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-.showcase-carousel__image-left {
-	perspective-origin: left center;
-	clip-path: polygon(0 0, 50% 0, 50% 100%, 0 100%);
-}
-.showcase-carousel__image-right {
-	perspective-origin: right center;
-	clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
-}
-.showcase-carousel__image-left .showcase-carousel__image {
-	animation: k-left-side 2s ease-in-out infinite;
-	animation-direction: alternate;
-}
-.showcase-carousel__image-right .showcase-carousel__image {
-	animation: k-right-side 2s ease-in-out infinite;
-	animation-direction: alternate;
-}
-
-/* NAVIGATION */
-
-.showcase-navigation {
-	overflow: hidden;
-	position: absolute;
-	z-index: 2;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-}
-.showcase-navigation > * {
-	position: absolute;
-	height: 100%;
-	width: 50%;
-	outline: none;
-	cursor: pointer;
-}
-.showcase-navigation__next {
-	right: 0;
-}
-.showcase-navigation > *::before {
-	content: '?';
-	font-family: assassin-st;
-	opacity: 0;
-	transition: opacity .75s ease-out;
-	position: absolute;
-	transform: rotate(-90deg);
-	left: 50px;
-	top: 50%;
-	font-size: 45px;
-}
-.showcase-navigation > *:hover::before {
-	opacity: .25;
-}
-.showcase-navigation__next::before {
-	transform: rotate(90deg);
-	right: 50px;
-	left: auto;
-}
-.showcase-navigation > *.swiper-button-disabled {
-	display: none;
-}
-
-/* ANIMATIONS */
-
-@keyframes k-light {
-	0% {
-		opacity: .2;
+.block-team {
+	overflow-x: hidden;
+	padding-top: calc($index * 0.5);
+	&__container {
+		position: relative;
+		max-width: 95vw;
+		margin: 0 auto;
+		padding-bottom: calc($index * 2);
 	}
-	50% {
-		opacity: .3;
+
+	.swiper-button-prev,
+	.swiper-button-next {
+		display: none;
 	}
-	100% {
-		opacity: .2;
+
+	.swiper-button-prev {
+		left: 0;
 	}
-}
-@keyframes k-glow {
-	0% {
-		opacity: .6;
+
+	.swiper-button-next {
+		right: 0;
 	}
-	50% {
-		opacity: .8;
+
+	.swiper-pagination {
+		position: relative;
+		top: 0;
+		margin: 0 auto calc($index * 1 * $coaficent-sm) auto;
 	}
-	100% {
-		opacity: .6;
+
+	.swiper-pagination-bullet {
+		display: inline-block;
+		font-family: noto-sans-tm;
+		font-size: calc($index * .46 * $coaficent-sm);
+		line-height: calc($index * .9 * $coaficent-sm);
+		width: calc($index * 1 * $coaficent-sm);
+		height: calc($index * 1 * $coaficent-sm);
+		margin: 0 calc($index * .33 * $coaficent-sm) !important;
+		background-color: #2c2c2c;
+    border: 1px solid #8f8f8f;
+	
 	}
-}
-@keyframes k-left-side {
-	0% {
-		transform: rotateY(-1deg) scaleX(.92);
+
+	.swiper-pagination-bullet-active {
+		background-color: #303030;
 	}
-	100% {
-		transform: rotateY(0deg) scaleX(1);
+
+	@include media-breakpoint-up(sm) {
+		padding-top: calc($index * 0.5);
+		&__container {
+			max-width: 85vw;
+		}
+
+		.swiper-button-prev,
+		.swiper-button-next {
+			display: flex;
+			width: calc($index * 1.03);
+			height: calc($index * 1.46);
+			background-color: $black;
+			border: 1px solid #8f8f8f;
+			transition: background-color 0.25s ease, border 0.25s ease;
+			top: calc($index * 10 * $coaficent-md);
+			@media (any-hover: hover) {
+				&:hover {
+					background-color: lighten($black, 5%);
+					border: 1px solid lighten(#8f8f8f, 5%);
+				}
+			}
+			&::after {
+				color: #f5f5f5;
+				font-size: calc($index * 0.6);
+			}
+		}
+		.swiper-pagination {
+			position: relative;
+			top: 0;
+			margin: 0 auto calc($index * 1 * $coaficent-md) auto;
+		}
+	
+		.swiper-pagination-bullet {
+			display: inline-block;
+			font-family: noto-sans-tm;
+			font-size: calc($index * .46 * $coaficent-md);
+			line-height: calc($index * .9 * $coaficent-md);
+			width: calc($index * 1 * $coaficent-md);
+			height: calc($index * 1 * $coaficent-md);
+			margin: 0 calc($index * .33 * $coaficent-md) !important;
+			background-color: #2c2c2c;
+			border: 1px solid #8f8f8f;
+		
+		}
 	}
-}
-@keyframes k-right-side {
-	0% {
-		transform: rotateY(0deg) scaleX(1);
-	}
-	100% {
-		transform: rotateY(1deg) scaleX(.92);
+	@include media-breakpoint-up(lg) {
+		padding-top: calc($index * 0.5);
+		&__container {
+			max-width: calc($index * 32);
+		}
+
+		.swiper-button-prev,
+		.swiper-button-next {
+			width: calc($index * 1.03);
+			height: calc($index * 1.46);
+			top: calc($index * 13);
+			&::after {
+				font-size: calc($index * 0.6);
+			}
+		}
+		.swiper-pagination-bullet {
+			display: inline-block;
+			font-family: noto-sans-tm;
+			font-size: calc($index * .46);
+			line-height: calc($index * .9);
+			width: calc($index * 1);
+			height: calc($index * 1);
+			margin: 0 calc($index * .33) !important;
+			background-color: #2c2c2c;
+			border: 1px solid #8f8f8f;
+		
+		}
 	}
 }
 
-/* === DESKTOP FIRST === */
+.slider-team {
+	min-width: 100%;
+	max-width: 85vw;
+	// .slider-team__slide
 
-/* xl <= Extra extra large (xxl) */
-// @media (max-width : 1400px) {
+	&__slide {
+		width: 100%;
+		text-align: center;
+		font-size: calc($index * 0.6 * $coaficent-md);
+		display: flex;
+		flex-direction: column;
+		user-select: none;
+	}
 
-// 	.showcase__content {
-// 		max-width: 1200px;
-// 		margin: auto;
-// 	}
+	// .slider-team__img
 
-// }
-.showcase__content {
-    max-width: 95vw;
-    margin: auto;
-}
+	&__img {
+		margin-bottom: calc($index * 0.83 * $coaficent-md);
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 
-/* lg <= Extra large (xl) */
-@media (max-width : 1200px) {
+	// .slider-team__title
 
-}
+	&__title {
+		font-family: raleway-tm, sans-serif;
+		margin-bottom: calc($index * 1 * $coaficent-md);
+		h3 {
+			font-weight: 500;
+			font-size: calc($index * 0.8 * $coaficent-sm);
+			line-height: 1.3;
+			text-align: center;
+			text-transform: uppercase;
+			color: rgba(#f5f5f5, 0.65);
+		}
 
-/* md <= Large (lg) */
-@media (max-width : 992px) {
+		p {
+			font-weight: 300;
+			font-size: calc($index * 0.6 * $coaficent-sm);
+			line-height: 1.3;
+			text-align: center;
+			color: rgba(#f5f5f5, 0.65);
+			margin: 0;
+		}
+	}
+	@include media-breakpoint-up(sm) {
+		max-width: calc($index * 23.3 * $coaficent-md);
+		min-width: auto;
+		// .slider-team__slide
 
-}
+		&__slide {
+			font-size: calc($index * 0.6 * $coaficent-md);
+		}
 
-/* sm <= Medium (md) */
-@media (max-width : 768px) {
+		// .slider-team__img
 
-}
+		&__img {
+			margin-bottom: calc($index * 0.83 * $coaficent-md);
+		}
 
-/* xs <= Small (sm) */
-@media (max-width : 576px) {
+		// .slider-team__title
 
-}
+		&__title {
+			margin-bottom: calc($index * 1 * $coaficent-md);
+			h3 {
+				font-size: calc($index * 0.8 * $coaficent-md);
+			}
 
+			p {
+				font-size: calc($index * 0.6 * $coaficent-md);
+			}
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		max-width: calc($index * 23.3);
+		// .slider-team__slide
 
-/* === MOBILE FIRST === */
+		&__slide {
+			font-size: calc($index * 0.6);
+		}
 
-/* Custom (xs) */
-@media (min-width : 0) {
+		// .slider-team__img
 
-}
+		&__img {
+			margin-bottom: calc($index * 0.83);
+		}
 
-/* Small (sm) */
-@media (min-width : 576px) {
+		// .slider-team__title
 
-}
+		&__title {
+			margin-bottom: calc($index * 1);
+			h3 {
+				font-size: calc($index * 0.8);
+			}
 
-/* Medium (md) */
-@media (min-width : 768px) {
-
-}
-
-/* Large (lg) */
-@media (min-width : 992px) {
-
-}
-
-/* Extra large (xl) */
-@media (min-width : 1200px) {
-	.text {
-		font-size: 18px;
+			p {
+				font-size: calc($index * 0.6);
+			}
+		}
 	}
 }
 
-/* Extra extra large (xxl) */
-@media (min-width : 1400px) {
-	.text {
-		font-size: 22px;
+.slider-team-logo {
+	margin: 0 auto;
+
+	// .slider-team-logo__slide
+
+	&__slide {
+		min-height: 1px;
+	}
+
+	// .slider-team-logo__img
+
+	&__img {
+		border: calc($index * .06) solid #424242;
+		padding: calc($index * .23);
+		border-radius: 50%;
+		overflow: hidden;
+		width: calc($index * 5.66);
+		height: calc($index * 5.66);
+		position: relative;
+		cursor: pointer;
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	@include media-breakpoint-up(lg) {
+		margin: 0 auto;
+
+		// .slider-team-logo__slide
+
+		&__slide {
+			min-height: 1px;
+			&.swiper-slide-thumb-active {
+				.slider-team-logo__img {
+					border: calc($index * .06) solid #fff;
+				}
+			}
+		}
+
+
+
+		// .slider-team-logo__img
+
+		&__img {
+			border: calc($index * .06) solid #424242;
+			padding: calc($index * .23);
+			border-radius: 50%;
+			overflow: hidden;
+			width: calc($index * 5.66);
+			height: calc($index * 5.66);
+			position: relative;
+			margin: 0  auto calc($index * .5)  auto;
+			cursor: pointer;
+			img {
+				display: block;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
+
+		&__title {
+			font-size: calc($index * 0.6);
+			text-align: center;
+		}
 	}
 }
