--- a/app/styles/sass/blocks/team.scss
+++ b/app/styles/sass/blocks/team.scss
@@ -264,6 +264,18 @@
 				.slider-team-logo__img {
 					border: calc($index * .06) solid #fff;
 				}
+				.slider-team-logo__title {
+					color: rgba(#f5f5f5, 1);
+					text-align: center;
+					h5 {
+						font-size: calc($index * 0.9);
+					}
+					p {
+						font-size: calc($index * 0.6);
+						
+					}
+		
+				}
 			}
 		}
 
@@ -290,8 +302,16 @@
 		}
 
 		&__title {
-			font-size: calc($index * 0.6);
+			color: rgba(#f5f5f5, 0.65);
 			text-align: center;
+			h5 {
+				font-size: calc($index * 0.9);
+			}
+			p {
+				font-size: calc($index * 0.6);
+				
+			}
+
 		}
 	}
 }
