--- a/app/styles/sass/blocks/team.scss
+++ b/app/styles/sass/blocks/team.scss
@@ -220,6 +220,9 @@
 
 			p {
 				font-size: calc($index * 0.6);
+				&:not(:last-child) {
+					margin-bottom: calc($index * 0.5);
+				}
 			}
 		}
 	}
@@ -269,12 +272,7 @@
 					text-align: center;
 					h5 {
 						font-size: calc($index * 0.9);
-					}
-					p {
-						font-size: calc($index * 0.6);
-						
-					}
-		
+					}		
 				}
 			}
 		}
@@ -306,12 +304,11 @@
 			text-align: center;
 			h5 {
 				font-size: calc($index * 0.9);
+				line-height: 1.4;
+				span {
+					display: block;
+				}
 			}
-			p {
-				font-size: calc($index * 0.6);
-				
-			}
-
 		}
 	}
 }
