--- a/app/styles/sass/blocks/team.scss
+++ b/app/styles/sass/blocks/team.scss
@@ -7,6 +7,10 @@
 		margin: 0 auto;
 		padding-bottom: calc($index * 2);
 	}
+	.swiper-wrapper {
+		align-items: flex-start !important;
+		//height: 600px;
+	}
 
 	.swiper-button-prev,
 	.swiper-button-next {
@@ -24,20 +28,19 @@
 	.swiper-pagination {
 		position: relative;
 		top: 0;
-		margin: 0 auto calc($index * 1 * $coaficent-sm) auto;
+		margin: 0 auto calc($index * 2 * $coaficent-sm) auto;
 	}
 
 	.swiper-pagination-bullet {
 		display: inline-block;
 		font-family: noto-sans-tm;
-		font-size: calc($index * .46 * $coaficent-sm);
-		line-height: calc($index * .9 * $coaficent-sm);
+		font-size: calc($index * 0.46 * $coaficent-sm);
+		line-height: calc($index * 0.9 * $coaficent-sm);
 		width: calc($index * 1 * $coaficent-sm);
 		height: calc($index * 1 * $coaficent-sm);
-		margin: 0 calc($index * .33 * $coaficent-sm) !important;
+		margin: 0 calc($index * 0.33 * $coaficent-sm) !important;
 		background-color: #2c2c2c;
-    border: 1px solid #8f8f8f;
-	
+		border: 1px solid #8f8f8f;
 	}
 
 	.swiper-pagination-bullet-active {
@@ -58,7 +61,7 @@
 			background-color: $black;
 			border: 1px solid #8f8f8f;
 			transition: background-color 0.25s ease, border 0.25s ease;
-			top: calc($index * 10 * $coaficent-md);
+			top: calc($index * 11);
 			@media (any-hover: hover) {
 				&:hover {
 					background-color: lighten($black, 5%);
@@ -73,33 +76,32 @@
 		.swiper-pagination {
 			position: relative;
 			top: 0;
-			margin: 0 auto calc($index * 1 * $coaficent-md) auto;
+			margin: 0 auto calc($index * 2 * $coaficent-md) auto;
 		}
-	
+
 		.swiper-pagination-bullet {
 			display: inline-block;
 			font-family: noto-sans-tm;
-			font-size: calc($index * .46 * $coaficent-md);
-			line-height: calc($index * .9 * $coaficent-md);
+			font-size: calc($index * 0.46 * $coaficent-md);
+			line-height: calc($index * 0.9 * $coaficent-md);
 			width: calc($index * 1 * $coaficent-md);
 			height: calc($index * 1 * $coaficent-md);
-			margin: 0 calc($index * .33 * $coaficent-md) !important;
+			margin: 0 calc($index * 0.33 * $coaficent-md) !important;
 			background-color: #2c2c2c;
 			border: 1px solid #8f8f8f;
-		
 		}
 	}
 	@include media-breakpoint-up(lg) {
 		padding-top: calc($index * 0.5);
 		&__container {
-			max-width: calc($index * 32);
+			max-width: 85vw;
 		}
 
 		.swiper-button-prev,
 		.swiper-button-next {
 			width: calc($index * 1.03);
 			height: calc($index * 1.46);
-			top: calc($index * 13);
+			top: calc($index * 7);
 			&::after {
 				font-size: calc($index * 0.6);
 			}
@@ -107,123 +109,13 @@
 		.swiper-pagination-bullet {
 			display: inline-block;
 			font-family: noto-sans-tm;
-			font-size: calc($index * .46);
-			line-height: calc($index * .9);
+			font-size: calc($index * 0.46);
+			line-height: calc($index * 0.9);
 			width: calc($index * 1);
 			height: calc($index * 1);
-			margin: 0 calc($index * .33) !important;
+			margin: 0 calc($index * 0.33) !important;
 			background-color: #2c2c2c;
 			border: 1px solid #8f8f8f;
-		
-		}
-	}
-}
-
-.slider-team {
-	min-width: 100%;
-	max-width: 85vw;
-	// .slider-team__slide
-
-	&__slide {
-		width: 100%;
-		text-align: center;
-		font-size: calc($index * 0.6 * $coaficent-md);
-		display: flex;
-		flex-direction: column;
-		user-select: none;
-	}
-
-	// .slider-team__img
-
-	&__img {
-		margin-bottom: calc($index * 0.83 * $coaficent-md);
-		img {
-			display: block;
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	}
-
-	// .slider-team__title
-
-	&__title {
-		font-family: raleway-tm, sans-serif;
-		margin-bottom: calc($index * 1 * $coaficent-md);
-		h3 {
-			font-weight: 500;
-			font-size: calc($index * 0.8 * $coaficent-sm);
-			line-height: 1.3;
-			text-align: center;
-			text-transform: uppercase;
-			color: rgba(#f5f5f5, 0.65);
-		}
-
-		p {
-			font-weight: 300;
-			font-size: calc($index * 0.6 * $coaficent-sm);
-			line-height: 1.3;
-			text-align: center;
-			color: rgba(#f5f5f5, 0.65);
-			margin: 0;
-		}
-	}
-	@include media-breakpoint-up(sm) {
-		max-width: calc($index * 23.3 * $coaficent-md);
-		min-width: auto;
-		// .slider-team__slide
-
-		&__slide {
-			font-size: calc($index * 0.6 * $coaficent-md);
-		}
-
-		// .slider-team__img
-
-		&__img {
-			margin-bottom: calc($index * 0.83 * $coaficent-md);
-		}
-
-		// .slider-team__title
-
-		&__title {
-			margin-bottom: calc($index * 1 * $coaficent-md);
-			h3 {
-				font-size: calc($index * 0.8 * $coaficent-md);
-			}
-
-			p {
-				font-size: calc($index * 0.6 * $coaficent-md);
-			}
-		}
-	}
-	@include media-breakpoint-up(lg) {
-		max-width: calc($index * 23.3);
-		// .slider-team__slide
-
-		&__slide {
-			font-size: calc($index * 0.6);
-		}
-
-		// .slider-team__img
-
-		&__img {
-			margin-bottom: calc($index * 0.83);
-		}
-
-		// .slider-team__title
-
-		&__title {
-			margin-bottom: calc($index * 1);
-			h3 {
-				font-size: calc($index * 0.8);
-			}
-
-			p {
-				font-size: calc($index * 0.6);
-				&:not(:last-child) {
-					margin-bottom: calc($index * 0.5);
-				}
-			}
 		}
 	}
 }
@@ -231,22 +123,16 @@
 .slider-team-logo {
 	margin: 0 auto;
 
-	// .slider-team-logo__slide
-
-	&__slide {
-		min-height: 1px;
-	}
-
-	// .slider-team-logo__img
-
 	&__img {
-		border: calc($index * .06) solid #424242;
-		padding: calc($index * .23);
+		border: calc($index * 0.06 * $coaficent-md) solid #424242;
+		padding: calc($index * 0.23 * $coaficent-md);
 		border-radius: 50%;
 		overflow: hidden;
-		width: calc($index * 5.66);
-		height: calc($index * 5.66);
+		width: calc($index * 5.66 * $coaficent-md);
+		height: calc($index * 5.66 * $coaficent-md);
 		position: relative;
+		margin: 0 auto calc($index * 0.5 * $coaficent-md) auto;
+		transition: all 0.3s ease;
 		cursor: pointer;
 		img {
 			display: block;
@@ -256,59 +142,162 @@
 		}
 	}
 
+	&__title {
+		color: rgba(#f5f5f5, 0.65);
+		text-align: center;
+		h5 {
+			font-size: calc($index * 0.9 * $coaficent-md);
+			line-height: 1.4;
+			span {
+				display: block;
+			}
+		}
+	}
+	.swiper-slide {
+		display: flex;
+		flex-direction: column;
+		transform: scale(0.6);
+		transition: all 200ms linear;	
+		&.swiper-slide-active {
+			transform: scale(1);
+			.slider-team-logo__img {
+				border-color:#fff;
+			}
+			.slider-team-logo__title {
+				display: none;
+			}
+			.slider-team-logo__content {
+				display: block;
+			}
+		}
+	}
+
+	// .slider-team-logo__title
+
+	&__title {
+		font-size: calc($index * 0.9 * $coaficent-md);
+		line-height: 1.4;
+		margin: 0;
+	}
+
+	// .slider-team-logo__content
+
+	&__content {
+		display: none;
+		text-align: center;
+		max-width: 500px;
+		margin: 0 auto;
+	}
+
+	// .slider-team-logo__content-title
+
+	&__content-title {
+		font-size: calc($index * 0.9 * $coaficent-sm);
+		line-height: 1.4;
+		margin-bottom: calc($index * 0.33 * $coaficent-sm);
+		color: rgba(#f5f5f5, 0.65);
+	}
+
+	// .slider-team-logo__content-post
+
+	&__content-post {
+		font-size: calc($index * 0.6 * $coaficent-sm);
+		line-height: 1.4;
+		margin-bottom: calc($index * 0.33 * $coaficent-sm);
+		color: rgba(#f5f5f5, 0.65);
+	}
+
+	// .slider-team-logo__content-text
+
+	&__content-text {
+		font-size: calc($index * 0.6 * $coaficent-sm);
+		color: rgba(#f5f5f5, 0.65);
+	}
+	@include media-breakpoint-up(sm) {
+		margin: 0 auto;
+	
+		// .slider-team-logo__img
+	
+		&__img {
+			width: calc($index * 5.66 * $coaficent-md);
+			height: calc($index * 5.66 * $coaficent-md);
+			margin: 0 auto calc($index * 0.5 * $coaficent-md) auto;
+		}
+	
+		&__title {
+			h5 {
+				font-size: calc($index * 0.9 * $coaficent-md);
+			}
+		}
+	
+		// .slider-team-logo__title
+	
+		&__title {
+			font-size: calc($index * 0.9 * $coaficent-md);
+		}
+	
+		// .slider-team-logo__content-title
+	
+		&__content-title {
+			font-size: calc($index * 0.9 * $coaficent-md);
+			margin-bottom: calc($index * 0.33 * $coaficent-md);
+		}
+	
+		// .slider-team-logo__content-post
+	
+		&__content-post {
+			font-size: calc($index * 0.6 * $coaficent-md);
+			margin-bottom: calc($index * 0.33 * $coaficent-md);
+		}
+	
+		// .slider-team-logo__content-text
+	
+		&__content-text {
+			font-size: calc($index * 0.6 * $coaficent-md);
+		}
+	}
+
 	@include media-breakpoint-up(lg) {
 		margin: 0 auto;
-
-		// .slider-team-logo__slide
-
-		&__slide {
-			min-height: 1px;
-			&.swiper-slide-thumb-active {
-				.slider-team-logo__img {
-					border: calc($index * .06) solid #fff;
-				}
-				.slider-team-logo__title {
-					color: rgba(#f5f5f5, 1);
-					text-align: center;
-					h5 {
-						font-size: calc($index * 0.9);
-					}		
-				}
-			}
-		}
-
-
-
+	
 		// .slider-team-logo__img
-
+	
 		&__img {
-			border: calc($index * .06) solid #424242;
-			padding: calc($index * .23);
-			border-radius: 50%;
-			overflow: hidden;
 			width: calc($index * 5.66);
 			height: calc($index * 5.66);
-			position: relative;
-			margin: 0  auto calc($index * .5)  auto;
-			cursor: pointer;
-			img {
-				display: block;
-				width: 100%;
-				height: 100%;
-				object-fit: cover;
-			}
+			margin: 0 auto calc($index * 0.5) auto;
 		}
-
+	
 		&__title {
-			color: rgba(#f5f5f5, 0.65);
-			text-align: center;
 			h5 {
 				font-size: calc($index * 0.9);
-				line-height: 1.4;
-				span {
-					display: block;
-				}
 			}
+		}
+	
+		// .slider-team-logo__title
+	
+		&__title {
+			font-size: calc($index * 0.9);
+		}
+	
+		// .slider-team-logo__content-title
+	
+		&__content-title {
+			font-size: calc($index * 0.9);
+			margin-bottom: calc($index * 0.33);
+		}
+	
+		// .slider-team-logo__content-post
+	
+		&__content-post {
+			font-size: calc($index * 0.6);
+			margin-bottom: calc($index * 0.33);
+		}
+	
+		// .slider-team-logo__content-text
+	
+		&__content-text {
+			font-size: calc($index * 0.6);
 		}
 	}
 }
