--- a/app/styles/sass/blocks/principles.scss
+++ b/app/styles/sass/blocks/principles.scss
@@ -3,13 +3,16 @@
 
 	&__row {
 		display: grid;
-		grid-template-columns: calc($index * 9) 1fr;
+		grid-template-columns: 1fr;
 		gap: calc($index * 5.33);
 	}
 
 	// .block-principles__menu
 
 	&__menu {
+		display: flex;
+		flex-wrap: wrap;
+		gap: calc($index * .5 * $coaficent-sm);
 		list-style: none;
 		margin: calc($index * 1) 0 0;
 		padding: 0;
@@ -18,29 +21,32 @@
 	// .block-principles__menu-item
 
 	&__menu-item {
+		flex: 1 0 auto;
 		display: flex;
+		align-items: center;
 		font-weight: 600;
-		font-size: calc($index * 0.66);
+		font-size: calc($index * 0.6 * $coaficent-sm);
 		line-height: 1.3;
 		text-transform: uppercase;
 		color: rgba($white, 0.25);
-		transition:  0.25s ease;		
+		white-space: nowrap;
+		transition: 0.25s ease;
 		cursor: pointer;
 		&:not(:last-child) {
-			margin-bottom: calc($index * 1.16);
+			margin-bottom: 0;
 		}
 		&::before {
-			content: '';
-			flex: 0 0 calc($index * 0.26);
+			content: "";
+			flex: 0 0 calc($index * 0.26  * $coaficent-sm);
 			display: inline-block;
-			height: calc($index * 0.5);
+			height: calc($index * 0.5  * $coaficent-sm);
 			margin-top: calc($index * 0.13);
 			background-image: url(../images/dist/icons/arrow-2.svg);
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
-			opacity:0;
-			transition: 0.25s ease;			
+			opacity: 0;
+			transition: 0.25s ease;
 		}
 		@media (any-hover: hover) {
 			&:hover {
@@ -55,14 +61,13 @@
 				transition: 0.25s ease;
 			}
 		}
-
 	}
 
 	// .block-principles__content
 
 	&__content {
 		display: grid;
-		grid-template-columns: 1fr calc($index * 19);
+		grid-template-columns: 1fr;
 		gap: calc($index * 5.83);
 	}
 
@@ -76,9 +81,9 @@
 
 	&__content-item {
 		position: relative;
-		padding-top: calc($index * 2);
+		padding-top: calc($index * 2 * $coaficent-sm);
 		&:not(:last-child) {
-			margin-bottom: calc($index * 0.83);
+			margin-bottom: calc($index * 0.83 * $coaficent-sm);
 		}
 		&::before {
 			position: absolute;
@@ -88,14 +93,14 @@
 			counter-increment: block-principles__content-items;
 			font-family: noto-sans-tm;
 			font-weight: 600;
-			font-size: calc($index * 2.4);
+			font-size: calc($index * 2.4 * $coaficent-sm);
 			line-height: 1.3;
 			text-transform: uppercase;
 			color: rgba($white, 0.05);
 		}
 		p {
 			font-weight: 300;
-			font-size: calc($index * 0.66);
+			font-size: calc($index * 0.66 * $coaficent-sm);
 			line-height: 1.3;
 			color: rgba($white, 0.5);
 			transition: color 0.25s ease;
@@ -113,11 +118,145 @@
 
 	&__content-photo {
 		overflow: hidden;
+		display: none;
 		img {
 			display: block;
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
+		}
+	}
+
+	@include media-breakpoint-up(sm) {
+		// .block-principles__row
+
+		&__row {
+			gap: calc($index * 4);
+		}
+
+		// .block-principles__menu
+
+		&__menu {
+			margin: calc($index * 1) 0 0;
+			gap: calc($index * .5 * $coaficent-md);
+		}
+
+		// .block-principles__menu-item
+
+		&__menu-item {
+			font-size: calc($index * 0.66 * $coaficent-md);
+			
+			&:not(:last-child) {
+				margin-bottom: 0;
+			}
+			&::before {
+				flex: 0 0 calc($index * 0.26);
+				height: calc($index * 0.5);
+				margin-top: calc($index * 0.13);
+			}
+
+			&._active {
+				&::before {
+					margin-right: calc($index * 0.5);
+				}
+			}
+		}
+
+		// .block-principles__content
+
+		&__content {
+			grid-template-columns: 1fr;
+			gap: calc($index * 5.83);
+		}
+
+		// .block-principles__content-item
+
+		&__content-item {
+			padding-top: calc($index * 2 * $coaficent-md);
+			&:not(:last-child) {
+				margin-bottom: calc($index * 0.83);
+			}
+			&::before {
+				font-size: calc($index * 2.4 * $coaficent-md);
+			}
+			p {
+				font-size: calc($index * 0.66 * $coaficent-md);
+			}
+		}
+
+
+	}
+
+	@include media-breakpoint-up(md) {
+		&__content {
+			grid-template-columns: 1fr calc($index * 23);
+			gap: calc($index * 5.83);
+		}
+			// .block-principles__content-photo
+
+			&__content-photo {
+				display: block;
+			}
+	}
+
+	@include media-breakpoint-up(lg) {
+		// .block-principles__row
+
+		&__row {
+			grid-template-columns: calc($index * 9) 1fr;
+			gap: calc($index * 5.33);
+		}
+
+		// .block-principles__menu
+
+		&__menu {
+			display: block;
+			gap: calc($index * .5 * $coaficent-md);
+			margin: calc($index * 1) 0 0;
+		}
+
+		// .block-principles__menu-item
+
+		&__menu-item {			
+			align-items: flex-start;
+			font-size: calc($index * 0.66);
+			white-space: normal;
+			&:not(:last-child) {
+				margin-bottom: calc($index * 1.16);
+			}
+			&::before {
+				flex: 0 0 calc($index * 0.26);
+				height: calc($index * 0.5);
+				margin-top: calc($index * 0.13);
+			}
+
+			&._active {
+				&::before {
+					margin-right: calc($index * 0.5);
+				}
+			}
+		}
+
+		// .block-principles__content
+
+		&__content {
+			grid-template-columns: 1fr calc($index * 19);
+			gap: calc($index * 4);
+		}
+
+		// .block-principles__content-item
+
+		&__content-item {
+			padding-top: calc($index * 2);
+			&:not(:last-child) {
+				margin-bottom: calc($index * 0.83);
+			}
+			&::before {
+				font-size: calc($index * 2.4);
+			}
+			p {
+				font-size: calc($index * 0.66);
+			}
 		}
 	}
 }
