--- a/app/styles/sass/blocks/start-block.scss
+++ b/app/styles/sass/blocks/start-block.scss
@@ -33,8 +33,8 @@
 			line-height: 1.19;
 			text-transform: uppercase;
 			text-align: center;
-			font-size: calc($index * 3.47 * 1.2);
-			margin-bottom: calc($index * 2.5 * 1.3);
+			font-size: calc($index * 3.47);
+			margin-bottom: calc($index * 2.5);
 		}
 		p {
 			font-weight: 300;
