--- a/app/styles/sass/blocks/principles.scss
+++ b/app/styles/sass/blocks/principles.scss
@@ -41,7 +41,7 @@
 			display: inline-block;
 			height: calc($index * 0.5  * $coaficent-sm);
 			margin-top: calc($index * 0.13);
-			background-image: url(../images/dist/icons/arrow-2.svg);
+			background-image: url(../images/dist/icons/arrow-red.svg);
 			background-position: center center;
 			background-repeat: no-repeat;
 			background-size: cover;
@@ -97,6 +97,7 @@
 			line-height: 1.3;
 			text-transform: uppercase;
 			color: rgba($white, 0.05);
+			transition: color 0.25s ease;
 		}
 		p {
 			font-weight: 300;
@@ -107,6 +108,9 @@
 		}
 		@media (any-hover: hover) {
 			&:hover {
+				&::before {
+					color: rgba($accent, 0.4);
+				}
 				p {
 					color: rgba($white, 1);
 				}
