--- a/app/styles/sass/blocks/about-us.scss
+++ b/app/styles/sass/blocks/about-us.scss
@@ -311,6 +311,7 @@
 				font-size: calc($index * 0.66 * $coaficent-md);
 				line-height: 1.3;
 				margin: 0;
+				color:rgba($accent, 0.75)
 			}
 			p {
 				margin: 0;
