--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -15,7 +15,7 @@
 		display: flex;
 		flex-direction: column;
 		overflow-y: auto;
-		transition: left 0.4s ease;
+		transition: left 0.3s;
 		z-index: 100;
 		&::before {
 			content: "";
