--- a/app/styles/sass/blocks/menu-burger.scss
+++ b/app/styles/sass/blocks/menu-burger.scss
@@ -4,7 +4,7 @@
 	height: calc($index * 1 * $coaficent-sm);	
 	position: relative;
 	transform: rotate(0deg);
-	transition: 0.5s ease-in-out;
+	//transition: 0.5s ease-in-out;
 	cursor: pointer;
 	z-index: 100;
 }
@@ -25,7 +25,7 @@
 	background: #fff;
 	opacity: 1;
 	transform: rotate(0deg);
-	transition: 0.25s ease-in-out;
+	//transition: 0.25s ease-in-out;
 }
 @include media-breakpoint-up(sm) {
 	.burger {
