--- a/app/styles/sass/blocks/navigation.scss
+++ b/app/styles/sass/blocks/navigation.scss
@@ -11,7 +11,7 @@
 	bottom: 0;
 	width: calc($index * 10 * $coaficent-sm);
 	z-index: 100;
-	transition: right 0.3s ease;
+	transition: right 0.3s;
 	&._active {
 		right: 0;
 		.menu-item {
