--- a/app/styles/sass/blocks/slider-services.scss
+++ b/app/styles/sass/blocks/slider-services.scss
@@ -66,7 +66,7 @@
 				}
 			}
 			&::after {
-				color: #f5f5f5;
+				color: $accent;
 				font-size: calc($index * 0.6);
 			}
 		}
@@ -156,7 +156,7 @@
 			line-height: 1.3;
 			text-align: center;
 			text-transform: uppercase;
-			color: rgba(#f5f5f5, 0.65);
+			color: rgba($accent, 0.75);
 		}
 
 		p {
