--- a/app/styles/sass/blocks/svg-burger.scss
+++ b/app/styles/sass/blocks/svg-burger.scss
@@ -30,13 +30,13 @@
 		position: relative;
 		cursor: pointer;
 		-webkit-tap-highlight-color: transparent;
-		transition: transform 400ms;
+		transition: transform .3s;
 		user-select: none;
 		z-index: 300;
 	}
 	.svg path {
 		fill: none;
-		transition: stroke-dasharray 400ms, stroke-dashoffset 400ms;
+		transition: stroke-dasharray .3s, stroke-dashoffset .3s;
 		stroke: #fff;
 		stroke-width: 3.5;
 		stroke-linecap: round;
@@ -47,12 +47,12 @@
 	.svg .middle {
 		stroke-dasharray: 40 142;
 		transform-origin: 50%;
-		transition: transform 400ms;
+		transition: transform .3s;
 	}
 	.svg .bottom {
 		stroke-dasharray: 40 85;
 		transform-origin: 50%;
-		transition: transform 400ms, stroke-dashoffset 400ms;
+		transition: transform .3s, stroke-dashoffset .3s;
 	}
 	&._active {
 		.svg {
