--- a/app/styles/sass/blocks/team.scss
+++ b/app/styles/sass/blocks/team.scss
@@ -27,7 +27,6 @@
 
 	.swiper-pagination {
 		position: relative;
-		top: 0;
 		margin: 0 auto calc($index * 2 * $coaficent-sm) auto;
 	}
 
@@ -61,7 +60,7 @@
 			background-color: $black;
 			border: 1px solid #8f8f8f;
 			transition: background-color 0.25s ease, border 0.25s ease;
-			top: calc($index * 11);
+			top: calc($index * 9 * $coaficent-md);
 			@media (any-hover: hover) {
 				&:hover {
 					background-color: lighten($black, 5%);
@@ -69,7 +68,7 @@
 				}
 			}
 			&::after {
-				color: #f5f5f5;
+				color: $accent;
 				font-size: calc($index * 0.6);
 			}
 		}
@@ -101,7 +100,7 @@
 		.swiper-button-next {
 			width: calc($index * 1.03);
 			height: calc($index * 1.46);
-			top: calc($index * 7);
+			top: calc($index * 9);
 			&::after {
 				font-size: calc($index * 0.6);
 			}
@@ -122,10 +121,11 @@
 
 .slider-team-logo {
 	margin: 0 auto;
+	max-width: 80vw;
 
 	&__img {
 		border: calc($index * 0.06 * $coaficent-md) solid #424242;
-		padding: calc($index * 0.23 * $coaficent-md);
+		padding: calc($index * 0.23);
 		border-radius: 50%;
 		overflow: hidden;
 		width: calc($index * 5.66 * $coaficent-md);
@@ -157,7 +157,7 @@
 		display: flex;
 		flex-direction: column;
 		transform: scale(0.6);
-		transition: all 200ms linear;	
+		transition: all .3s linear;	
 		&.swiper-slide-active {
 			transform: scale(1);
 			.slider-team-logo__img {
@@ -194,17 +194,17 @@
 	&__content-title {
 		font-size: calc($index * 0.9 * $coaficent-sm);
 		line-height: 1.4;
-		margin-bottom: calc($index * 0.33 * $coaficent-sm);
-		color: rgba(#f5f5f5, 0.65);
+		margin-bottom: calc($index * 0.13 * $coaficent-sm);
+		color: rgba($accent, 0.85);
 	}
 
 	// .slider-team-logo__content-post
 
 	&__content-post {
-		font-size: calc($index * 0.6 * $coaficent-sm);
+		font-size: calc($index * 0.9 * $coaficent-sm);
 		line-height: 1.4;
 		margin-bottom: calc($index * 0.33 * $coaficent-sm);
-		color: rgba(#f5f5f5, 0.65);
+		color: rgba(#f5f5f5, 0.75);
 	}
 
 	// .slider-team-logo__content-text
@@ -240,13 +240,13 @@
 	
 		&__content-title {
 			font-size: calc($index * 0.9 * $coaficent-md);
-			margin-bottom: calc($index * 0.33 * $coaficent-md);
+			margin-bottom: calc($index * 0.13 * $coaficent-md);
 		}
 	
 		// .slider-team-logo__content-post
 	
 		&__content-post {
-			font-size: calc($index * 0.6 * $coaficent-md);
+			font-size: calc($index * 0.9 * $coaficent-md);
 			margin-bottom: calc($index * 0.33 * $coaficent-md);
 		}
 	
@@ -284,13 +284,13 @@
 	
 		&__content-title {
 			font-size: calc($index * 0.9);
-			margin-bottom: calc($index * 0.33);
+			margin-bottom: calc($index * 0.13);
 		}
 	
 		// .slider-team-logo__content-post
 	
 		&__content-post {
-			font-size: calc($index * 0.6);
+			font-size: calc($index * 0.9);
 			margin-bottom: calc($index * 0.33);
 		}
 	
