--- a/app/styles/sass/blocks/example-block.scss
+++ b/app/styles/sass/blocks/example-block.scss
@@ -1,3 +1,30 @@
+*,
+html * {
+	scrollbar-width: thin;
+	scrollbar-color: $button-bg $black;
+}
+
+*::-webkit-scrollbar,
+html *::-webkit-scrollbar {
+	height: 12px;
+	width: 12px;
+}
+*::-webkit-scrollbar-track,
+html *::-webkit-scrollbar-track {
+	background: $black;
+}
+*::-webkit-scrollbar-thumb,
+html *::-webkit-scrollbar-thumb {
+	background-color: $button-bg;
+	border-radius: 5px;
+	border: 3px solid $black;
+}
+
+html {
+	scrollbar-color: #6969dd #e0e0e0;
+	scrollbar-width: thin;
+}
+
 .header {
 	position: relative;
 	background-color: $black;
@@ -5,42 +32,8 @@
 	display: flex;
 	gap: calc($index * 0.34);
 	height: 100vh;
-	&__left {
-		position: absolute;
-		top: calc($index * 0.33);
-		bottom: calc($index * 0.33);
-		max-width: calc($index * 23);
-		padding-top: calc($index * 1.5);
-		left: -100%;
-		display: flex;
-		flex-direction: column;
-		overflow-y: auto;
-		transition: left 0.3s;
-		z-index: 100;
-		&::before {
-			content: "";
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0;
-			height: calc($index * 1.9 * $coaficent-sm);
-			width: 100%;
-			background-color: #303030;
-			z-index: 100;
-			@include media-breakpoint-up(sm) {
-				height: calc($index * 1.9 * $coaficent-md);
-			}
-			@include media-breakpoint-up(lg) {
-				height: calc($index * 1.9);
-			}
-		}
-	}
 
-	&__left._active {
-		left: 0;
-	}
-
-	&__right {
+	&__content {
 		flex: 1 1 auto;
 		display: flex;
 		flex-direction: column;
@@ -49,24 +42,11 @@
 	}
 }
 
-.game {
-	position: relative;
-	width: 100%;
-	flex: 1 1 auto;
-	padding: calc($index * 0.7) calc($index * 0.7);
-
-	border-bottom: calc($index * 0.34) solid #2c2c2c;
-	&__body {
-		position: relative;
-		min-height: 100%;
-	}
-}
-
 .message {
 	flex: 0 1 calc($index * 9.66);
 }
 
-.header__right-top {
+.header__top {
 	display: flex;
 	gap: calc($index * 0.7);
 	align-items: center;
@@ -146,8 +126,6 @@
 	}
 }
 
-
-
 .page-content {
 	height: 100%;
 	overflow-y: auto;
@@ -206,8 +184,6 @@
 	}
 }
 
-
-
 .button {
 	display: inline-block;
 	padding: calc($index * 0.5 * $coaficent-sm)
@@ -220,12 +196,14 @@
 	text-transform: uppercase;
 	color: #8e8e8e;
 	background-color: $button-bg;
+	text-decoration: none;
 	border: none;
 	appearance: none;
 	user-select: none;
 	transition: background-color 0.25s ease;
 	@media (any-hover: hover) {
 		&:hover {
+			color: #8e8e8e;
 			background-color: darken($button-bg, 3%);
 		}
 	}
