--- a/app/styles/sass/blocks/messages.scss
+++ b/app/styles/sass/blocks/messages.scss
@@ -28,16 +28,17 @@
 	&__content {
 		align-self: center;
 		color: rgba($white, 0.75);
+		margin-bottom: calc($index * 0.33 * $coaficent-sm);
 		h3 {
 			font-weight: 700;
-			font-size: calc($index * 0.66);
+			font-size: calc($index * 0.66 * $coaficent-sm);
 			line-height: 1.2;
-			margin-bottom: calc($index * 0.33);
+			margin-bottom: calc($index * 0.33 * $coaficent-sm);
 		}
 		p {
 			font-weight: 300;
 			line-height: 1.2;
-			font-size: calc($index * 0.53);
+			font-size: calc($index * 0.53 * $coaficent-sm);
 			line-height: 1.2;
 			margin: 0;
 		}
@@ -50,8 +51,10 @@
 	// .message__buttons
 
 	&__buttons {
-		justify-self: stretch;
+		grid-column: 1 / 3;
+		justify-self: center;
 		align-self: center;
+		margin-bottom: calc($index * 0.33 * $coaficent-sm);
 	}
 
 	// .message__button
@@ -93,11 +96,112 @@
 		grid-column: 1 / 3;
 	}
 
-}
-.contact-us {
-}
+	@include media-breakpoint-up(sm) {
+		padding: calc($index * 0.5) calc($index * 1);
 
+		// .message__container
 
+		&__container {
+			grid-template-columns: 1fr auto;
+			grid-template-rows: 1fr auto;
+			column-gap: calc($index * 1.33);
+			row-gap: calc($index * 0.5);
+			font-size: calc($index * 0.6);
+		}
+
+		// .message__content
+
+		&__content {
+			align-self: center;
+			margin-bottom: calc($index * 0.33 * $coaficent-md);
+			h3 {
+				font-size: calc($index * 0.66 * $coaficent-md);
+				margin-bottom: calc($index * 0.33 * $coaficent-md);
+			}
+			p {
+				font-size: calc($index * 0.53 * $coaficent-md);
+			}
+		}
+
+		// .message__buttons
+
+		&__buttons {
+			margin-bottom: calc($index * 0.33 * $coaficent-md);
+		}
+
+		// .message__button
+
+		&__button {
+		}
+
+		&__track {
+			//grid-column: 1 / 3;
+		}
+
+		&__footer {
+			grid-column: 1 / 3;
+			align-self: end;
+			font-size: calc($index * 0.53 * $coaficent-md);
+			padding-top: calc($index * 0.33 * $coaficent-md);
+		}
+
+		// .message__timer
+
+		&__timer {
+			grid-column: 1 / 3;
+		}
+	}
+
+	@include media-breakpoint-up(lg) {
+		padding: calc($index * 0.5) calc($index * 1);
+
+		&__container {
+			grid-template-columns: 1fr auto;
+			grid-template-rows: 1fr auto;
+			column-gap: calc($index * 1.33);
+			row-gap: calc($index * 0.5);
+			font-size: calc($index * 0.6);
+		}
+
+		// .message__content
+
+		&__content {
+			align-self: center;
+			margin-bottom: calc($index * 0.33);
+			h3 {
+				font-size: calc($index * 0.66);
+				margin-bottom: calc($index * 0.33);
+			}
+			p {
+				font-size: calc($index * 0.53);
+			}
+		}
+
+		// .message__buttons
+
+		&__buttons {
+			grid-column: 2 / 3;
+			justify-self: stretch;
+			align-self: center;
+		}
+
+		// .message__button
+
+		&__button {
+		}
+
+		&__track {
+			grid-column: 1 / 3;
+		}
+
+		&__footer {
+			grid-column: 1 / 3;
+			font-size: calc($index * 0.53);
+			color: rgba($white, 0.5);
+			padding-top: calc($index * 0.33);
+		}
+	}
+}
 
 .message-timer {
 	display: flex;
@@ -108,7 +212,7 @@
 	&__time {
 		font-family: noto-sans-tm;
 		font-weight: 300;
-		font-size: calc($index * 0.6);
+		font-size: calc($index * 0.6 * $coaficent-sm);
 		line-height: 1.3;
 		color: rgba($white, 0.75);
 		margin-right: 19px;
@@ -125,7 +229,7 @@
 		span {
 			position: absolute;
 			top: 0;
-			left: 0;			
+			left: 0;
 			height: 100%;
 			background-color: #c4c4c4;
 			transition: width 2s ease;
@@ -135,10 +239,22 @@
 			animation-fill-mode: forwards;
 		}
 	}
+
+	@include media-breakpoint-up(sm) {
+		&__time {
+			font-size: calc($index * 0.6  * $coaficent-md);
+			margin-right: calc($index * 0.66);
+		}
+	}
+	@include media-breakpoint-up(lg) {
+		&__time {
+			font-size: calc($index * 0.6);
+			margin-right: calc($index * 0.66);
+		}
+	}
 }
 
-
-@keyframes message-timer-load  {
+@keyframes message-timer-load {
 	0% {
 		width: 0;
 	}
@@ -150,18 +266,17 @@
 .assistant-message {
 	max-width: calc($index * 16);
 	margin: 0 auto;
-	
+
 	// .assistant-message__content
 
 	&__content {
 		@extend .message__content;
 		grid-column: 1 / 3;
 		display: flex;
-		align-items: center;		
+		align-items: center;
 		h3 {
-			margin-bottom: 0;			
+			margin-bottom: 0;
 		}
-		
 	}
 
 	// .assistant-message__img
@@ -171,8 +286,8 @@
 		width: calc($index * 4.46);
 		height: calc($index * 4.46);
 		margin-right: calc($index * 1);
-		border: calc($index * .06) solid #424242;
-		padding: calc($index * .23);
+		border: calc($index * 0.06) solid #424242;
+		padding: calc($index * 0.23);
 		border-radius: 50%;
 		overflow: hidden;
 		img {
@@ -204,9 +319,8 @@
 
 	&__button {
 		min-width: calc($index * 7.66);
-		padding: calc($index * 0.5) calc($index * .5);
+		padding: calc($index * 0.5) calc($index * 0.5);
 	}
 }
 .button {
 }
-
