--- a/app/styles/sass/blocks/slider-cases.scss
+++ b/app/styles/sass/blocks/slider-cases.scss
@@ -232,14 +232,15 @@
 
 	&__items {
 		display: flex;
-		justify-content: center;
+		justify-content: space-between;
+		flex-direction: column;
 		gap: calc($index * 1.8);
 	}
 
 	// .slider-services-logo__item
 
 	&__item {
-		flex: 0 1 calc($index * 10.4);
+		flex: 0 1 auto;
 		text-align: center;
 		position: relative;
 	}
@@ -259,10 +260,59 @@
 	&__text {
 		p {
 			font-weight: 300;
-			font-size: calc($index * 0.53);
+			font-size: calc($index * 0.53 * $coaficent-sm);
 			line-height: 1.3;
 			color: #f5f5f5;
-			text-align: start;
+			text-align: center;
+		}
+	}
+	@include media-breakpoint-up(sm) {
+		&__items {
+			justify-content: center;
+			flex-direction: row;
+			gap: calc($index * 1.8);
+		}
+	
+		// .slider-services-logo__item
+	
+		&__item {
+			flex: 0 1 calc($index * 10.4 * $coaficent-md);
+		}
+	
+		&__icon {
+			height: calc($index * 2.7);
+			margin-bottom: calc($index * 0.83);
+
+		}
+	
+		&__text {
+			p {
+				font-size: calc($index * 0.53 * $coaficent-md);
+			}
+		}
+	}
+	@include media-breakpoint-up(lg) {
+	
+		&__items {
+			gap: calc($index * 1.8);
+		}
+	
+		// .slider-services-logo__item
+	
+		&__item {
+			flex: 0 1 calc($index * 10.4);
+		}
+	
+		&__icon {
+			height: calc($index * 2.7);
+			margin-bottom: calc($index * 0.83);
+
+		}
+	
+		&__text {
+			p {
+				font-size: calc($index * 0.53);
+			}
 		}
 	}
 }
